fixed aria and contrast errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,7 @@
     opacity: 0.5;
     visibility: visible;
 }
+
+.corsLink {
+    color: #56a7ff;
+  }
